Adds styles to search inputs

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -547,7 +547,8 @@ div.widget .extendednavigation > ul, div.widget.extendednavigation > ul {
 .blogsearch input,
 select,
 input[type=text],
-input[type=email] {
+input[type=email],
+input[type=search] {
     background-color: @color-swatch2;
     border: 1px solid darken(@color-swatch2,2%);
     text-indent: 0;
