--- a/stylesheet.less
+++ b/stylesheet.less
@@ -533,6 +533,17 @@ div.widget .extendednavigation > ul, div.widget.extendednavigation > ul {
   }
 
 /* ===============================
+   IMAGE WIDGET
+   =============================== */
+
+.widget.image span.image-title {
+	padding: 5px;
+	margin: 0;
+	clear: both;
+}
+
+
+/* ===============================
    FORMS
    =============================== */
 
