attempt to fix social icons widget for editor mode

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -794,6 +794,13 @@ ul.twitter {
    SOCIAL ICONS
    =============================== */
 
+.widget.socialicons {
+    clear: both;
+    float: left;
+    width: 100%;
+}
+
+
 .widget.profile .bk-profile-socialicons span a,
 .widget.socialicons span a  {
     -webkit-border-radius: 50px;
