--- a/stylesheet.less
+++ b/stylesheet.less
@@ -301,6 +301,7 @@
 	            line-height: 1em;
         	}
             a {
+                white-space: normal;
                 @media only screen and (max-width: 450px) {
                     font-size: bkscale(@font-swatch6-font-size, 0.9);
                     line-height: bkscale(@font-swatch6-line-height,0.9);
