--- a/stylesheet.less
+++ b/stylesheet.less
@@ -565,6 +565,9 @@ input[type=search] {
     text-indent: 0;
     height: 42px;
     vertical-align: middle;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
     @media @mobile {
     	width: 100%;
         margin-bottom: 10px;
