add margin bottom to input and select

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -568,6 +568,7 @@ input[type=search] {
     border-radius: 0;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
+    margin-bottom: 5px;
     @media @mobile {
     	width: 100%;
         margin-bottom: 10px;
