add min-width to map

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -195,6 +195,9 @@
             .bk-profile-socialicons {
                 margin: 0;
             }
+            .map {
+                min-width: 300px;
+            }
 		}
 	}
 	.header-prof-right {
