test sticky footer

--- a/default.twig
+++ b/default.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="bk-default">
+
 <nav class="bk-nav" id="nav">
 	{{widget('extendednavigation', 'navigationheader', {"align":"left"})|raw}}
 </nav>
@@ -39,6 +41,10 @@
 		    </div>
 		</div>
 	</footer>
-</div><!--end main-->
+</div>
+
+</div>
+
+
 
 {% endblock %}
