attempt to fix sticky footer

--- a/default.twig
+++ b/default.twig
@@ -27,7 +27,7 @@
 		</div><!--end contain-->
 	</div><!--end header-profile-->
 
-	<div class="contain" id="contain">
+	<div class="contain main-zone" id="contain">
 			{{zone('main')|raw}}
 	</div><!--end contain-->
 
