--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1685,7 +1685,7 @@ span.ecom-product-category {
     -ms-flex-direction: column;
 }
 
-.bk-default .contain {
+.bk-default .main-zone {
     flex: 1;
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
