attempt to fix sticky footer

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1673,7 +1673,7 @@ span.ecom-product-category {
 // #Default page sticky footer
 // ------------------------------------------
 
-.bk-default div[role=main]{
+.bk-default {
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -1685,7 +1685,7 @@ span.ecom-product-category {
     -ms-flex-direction: column;
 }
 
-.bk-default div[role=main] .main-zone {
+.bk-default .main-area {
     flex: 1;
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
