--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1673,7 +1673,7 @@ span.ecom-product-category {
 // #Default page sticky footer
 // ------------------------------------------
 
-.bk-default {
+.bk-default #main {
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -1685,7 +1685,7 @@ span.ecom-product-category {
     -ms-flex-direction: column;
 }
 
-.bk-default .main-area {
+.bk-default #main .main-area {
     flex: 1;
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
