--- a/default.twig
+++ b/default.twig
@@ -8,7 +8,7 @@
 	{{widget('extendednavigation', 'navigationheader', {"align":"left"})|raw}}
 </nav>
 
-<div role="main" id="main" class="main-area">
+<div role="main" id="main">
 	<header class="bk-header">
 	</header>
 	<div class="header-profile">
