DT-1222 Added margin-bottom to product description at tablet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1467,7 +1467,7 @@ span.ecom-product-category {
 }
 
 .ecom-product-long-description {
-    @media @mobile {
+    @media @tablet {
         margin-top: 20px;
     }
 }
