--- a/layout.twig
+++ b/layout.twig
@@ -24,6 +24,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="{{ asset('libs/jquery-1.10.2.min.js')}}"><\/script>')</script>
+
 	{% include basekit.headScript %}
 </head>
 <body class="{{ page.backgroundClass }}">
@@ -31,34 +34,32 @@
 	{% block content %}
 	{% endblock %}
 	{% include basekit.bodyScript %}
-<script type="text/javascript">
-	! function () {
-	    function supportsSVG() {
-	        return !!document.createElementNS && !! document.createElementNS('http://www.w3.org/2000/svg', 'svg').createSVGRect
-	    }
-	    if (supportsSVG()) document.documentElement.className += ' svg'
-	}()
-</script>
+	
+	<script type="text/javascript">
+		! function () {
+		    function supportsSVG() {
+		        return !!document.createElementNS && !! document.createElementNS('http://www.w3.org/2000/svg', 'svg').createSVGRect
+		    }
+		    if (supportsSVG()) document.documentElement.className += ' svg'
+		}()
+	</script>
 
-<script>
-  (function() {
-    var $body = document.body
-    , $menu_trigger = $body.getElementsByClassName('pull')[0];
+	<!-- Nav Menu Script -->
+	<script>
+		$(function() {
+			// Toggles class open to display/hide the whole navigation
+			$( ".pull" ).click(function() {
+				$( "body" ).toggleClass( "menu-active" );
+			});
+		});
+	</script>
 
-    if ( typeof $menu_trigger !== 'undefined' ) {
-      $menu_trigger.addEventListener('click', function() {
-        $body.className = ( $body.className == 'menu-active' )? '' : 'menu-active';
-      });
-    }
-  }).call(this);
-</script>
-
-<script type="text/javascript">
-	$(".widget.feature").css("height", $(window).height());
-	$(window).bind("resize",function() {
-	    $(".widget.feature").css("height", $(window).height());
-	});
-</script>
+	<script type="text/javascript">
+		$(".widget.feature").css("height", $(window).height());
+		$(window).bind("resize",function() {
+		    $(".widget.feature").css("height", $(window).height());
+		});
+	</script>
 
 </body>
 </html>
