--- a/stylesheet.less
+++ b/stylesheet.less
@@ -3,6 +3,7 @@
    =============================== */
 
 @import "@{templateCommon}/basekit-bootstrap.less";
+@import "@{templateLocal}/less/touch-events.less";
 @tablet: ~"only screen and (max-width: 860px)";
 @mobile: ~"only screen and (max-width: 650px)";
 
