Added missing opening bracket

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -29,7 +29,7 @@
    =============================== */
 
 // Language selector fix
-.language-selector
+.language-selector {
     z-index: 9999;
     position: relative;
 }
